# lcm-tutorial

./: README.md
Firststep/modules/app/: my_lcm_pub.c  my_lcm_sub.c
Nextstep/: CMakeLists.txt  README.md
Quickstart/c/: CMakeLists.txt  my_lcm_pub.c  my_lcm_sub.c
Quickstart/c/mylcm/: lcm_gen.sh  my_lcm_message_date_struct_t.lcm  mylcm_my_lcm_message_date_struct_t.h
Quickstart/cpp/: CMakeLists.txt  my_lcm_readlog.cpp  my_lcm_sub.cpp
mytest/c/mylcm/: CMakeLists.txt  mylcm_my_lcm_message_date_struct_t.c
mytest/cpp/: my_lcm_pub.cpp
mytest/cpp/mylcm/: my_lcm_message_date_struct_t.hpp
